# Sago

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Sago/: CMakeLists.txt
Sago/Runtime/Reflction/: sreflection.h
Sago/common/: single_internal.h
Sago/context/: context_base.h  engine_context.cpp  engine_context.h  vulkan_context.cpp
Sago/context/controller/: framerate_controller.cpp  framerate_controller.h
Sago/context/event/: event_loop.h  renderer_event.h
Sago/context/renderer/: render_context.h  renderer_context.cpp  renderer_context.h  vulkan_context.cpp  vulkan_context.h
Sago/context/renderer/event/: renderer_event_type.h
Sago/core/async/: async_tag.h
Sago/core/async/coroutine/: cortutine_awaitable.h  corutine_base.h  corutine_example.cpp
Sago/core/async/coroutine/task/: file_read.h
Sago/core/async/threadpool/: thread_pool.h
Sago/core/events/: code.md  event_codec.h  event_coder.h  event_dispatcher.h  event_system.h  event_types.h
Sago/core/io/log/: log.cpp  log.h
Sago/core/memory/: free_list.h  simple_allocate.h
Sago/core/memory/buffer/: double_buffer.cpp  double_buffer.h  ring_buffer.cpp  ring_buffer.h
Sago/core/memory/lockfree/: array.h  queue.cpp  queue.h
Sago/core/memory/lockfree/MPMC/: continuous_memorypool.h
Sago/core/memory/lockfree/SPSC/: array.h
Sago/core/memory/pool/: free_list.h
Sago/core/time/: time_utility.h
Sago/core/util/: dll_export.h  hash_func.h  spain_lock.cpp  spain_lock.h
Sago/drivers/shaders/: shader_build.py
Sago/drivers/shaders/simple_pipeline/: triangle_frag.glsl  triangle_frag.spv  triangle_vert.glsl  triangle_vert.spv
Sago/drivers/vulkan/: vk_command.cpp  vk_command.h  vk_context_data.h  vk_descritpor.h  vk_device.cpp  vk_device.h  vk_instance.cpp  vk_instance.h  vk_log.h  vk_manager.cpp
Sago/drivers/vulkan/command/: vk_command.cpp  vk_command.h
Sago/drivers/vulkan/commands/: vk_command.cpp  vk_command.h  vk_commandbuild.cpp  vk_commandbuild.h  vk_commandpool.cpp  vk_commandpool.h  vk_fence.cpp  vk_fence.h  vk_semaphore.cpp  vk_semaphore.h  vk_upload_manager.cpp  vk_upload_manager.h
Sago/drivers/vulkan/extensions/: vk_check.cpp  vk_check.h  vk_surface.cpp  vk_surface.h  vk_swapchain.cpp  vk_swapchain.h
Sago/drivers/vulkan/memory/: vertex.h  vertex_buffer.h  vk_memory_requirement.h  vk_vma_allocator.cpp  vk_vma_allocator.h
Sago/drivers/vulkan/pipelines/: vk_pipeline_base.h  vk_pipeline_build.cpp  vk_pipeline_build.h  vk_pipeline_simple.cpp  vk_pipeline_simple.h
Sago/drivers/vulkan/pipelines/shaders/: vk_shaders_manager.cpp  vk_shaders_manager.h
Sago/drivers/vulkan/renderpass/: vk_frambuffer.cpp  vk_frambuffer.h  vk_renderpass_base.h  vk_renderpass_simple.cpp  vk_renderpass_simple.h  vk_renderpass_ui.cpp  vk_renderpass_ui.h
Sago/drivers/vulkan/tools/: vk_read_shaders.cpp  vk_read_shaders.h
Sago/drivers/vulkan/util/: vk_default.h  vk_queue_faimly.h  vk_queue_family.cpp
Sago/ecs/: Sgecs.h
Sago/ecs/ecs/: entity.h  generator.h  group.h  registry.h  sparse_set.h  view.h  world.h
Sago/meta/: meta.h  type.h
Sago/meta/Reflection/: macro.h  refl.h  sreflection.h
Sago/meta/tools/: time_framerate.h
Sago/meta/traits/: check_traits.h  class_traits.h
Sago/tmp/traits/: check_traits.h
main/: config.h  main.cpp  runtime.cpp  runtime.h
main/resources/: Singleton.cpp
platform/: CMakeLists.txt
platform/cmake/: copy_dirctory.cmake
platform/editor/: editor_imgui_init.cpp  editor_imgui_init.h
platform/window/: window_sdl.cpp  window_sdl.h
simple_pipeline/: triangle_frag.glsl  triangle_frag.spv  triangle_vert.glsl  triangle_vert.spv
